fixed spacing issue on index.html
fixed spacing issue with main services

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -75,6 +75,10 @@ hr {
 .main-content h1 {
   font-size: 1.3rem;
 }
+.main-content p,
+.main-content h1 {
+  padding: 0 10px;
+}
 
 /* background image */
 .background-image {
